--- a/src/components/GameCarousel.css
+++ b/src/components/GameCarousel.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #111113;
+}
+
 @keyframes slide {
     from {
         transform: translateX(0);
@@ -15,8 +19,9 @@
 
 .slider {
     overflow: hidden;
-    padding: 60px 0;
+    padding: 10px 0;
     white-space: nowrap;
+    margin-left: 20%;
 }
 
 .slide-track {
@@ -25,6 +30,8 @@
 }
 
 .slide-track img {
-    height: 50px;
-    margin: 0 100px;
+    opacity: 0.6;
+    margin: 0 10px;
+    width: 200px;
+    border-radius: 20px;
 }
