--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: flex-start;
     padding: 0.5em;
-    background-color: #f8f8f8;
+    background-color: #282828;
   }
   
   .navbar a:first-child {
@@ -11,7 +11,7 @@
   
   .navbar a {
     display: inline-block;
-    color: #333;
+    color: #ffffff;
     text-decoration: none;
     padding: 10px;
     margin-right: 100px;
