--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -26,9 +26,46 @@
   }
   
   .search-form input {
-    margin-right: 1em;
+    width: 80%;
+    height: 2.0rem;
+    background-color: #111113;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
   }
- 
+
+  svg {
+    margin-top: 0.2rem;
+    margin-left: -2.1rem;
+    background: none;
+    border: none;
+    outline: none;
+  }
+
+  #search-icon{
+    width: 3.5rem;
+    height: 2.8rem;
+    margin-left: -2.5rem;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  .search-form input:hover {
+    background-color: rgba(255, 255, 255, 0.7);
+    transition: background-color 0.1s ease;
+  }
+
+  .search-form input:focus {
+    background-color: #ffffff;
+    transition: background-color 0.1s ease;
+    outline: none; 
+  }
+
   .dropdown-menu {
     position: absolute;
     right: 0;
@@ -36,10 +73,10 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 8px 8px;
     z-index: 1;
-    width: 150px; /* Adjust this value to your preference */
-    display: flex; /* Add this line */
-    flex-direction: column; /* Add this line */
-    align-items: center; /* Add this line */
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
   }
 
@@ -59,9 +96,10 @@
     box-sizing: border-box;
   }
   
-  /* components/Navbar.css */
   .profile-menu {
     position: relative;
     margin-right: 30px;
     margin-top: 4px;
   }
+
+  
