--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -12,7 +12,7 @@ body {
     text-decoration: none;
     color: white;
     font-size: 2em;
-    background-color: #3ab1b1;
+    background-color: #541A8C;
     padding: 10px 20px;
     border-radius: 10px;
     transition: #070707 0.3s;
