--- a/src/styles/GamePage.css
+++ b/src/styles/GamePage.css
@@ -3,13 +3,28 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-top: 1%;
 }
 
 .game_scs .background-image {
     width: 50%;
-    border-radius: 100px;
     aspect-ratio: 16 / 9;
     background-size: cover;
     background-position: center;
-    box-shadow: 25px 25px 50px 0 #111113 inset, -25px -25px 50px 0 #111113 inset; 
+    position: relative;
+    z-index: 1;
+}
+
+.game_scs .background-image::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    border-radius: inherit;
+    background: 
+        linear-gradient(to bottom, transparent 80%, #111113 100%),
+        linear-gradient(to right, transparent 80%, #111113 100%),
+        linear-gradient(to left, transparent 80%, #111113 100%),
+        linear-gradient(to top, transparent 80%, #111113 100%);
+    z-index: 2;
 }
