--- a/src/styles/GamePage.css
+++ b/src/styles/GamePage.css
@@ -36,26 +36,35 @@
     position: relative;
     z-index: 3; /* added to bring the container in front of the carousel */
     margin-top: -50px;
-    margin-left: 240px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .content {
     display: flex;
-    align-items: flex-start; /* changed from center to flex-start */
+    align-items: flex-start; 
 }
 
 .cover {
-    margin-top: -50px; /* adjust as needed */
-    width: 20%;
+    width: 25%;
     object-fit: contain;
     object-position: center;
     border-radius: 25px;
 }
 
 .info {
-    margin-top: -30px;
     margin-left: 20px;
     h1, h2 {
         color: white;
     }
+    .title {
+        text-decoration: underline;
+        text-decoration-color: #541A8C;
+        text-decoration-thickness: 4px;
+    }
+}
+
+.summary {
+    color: white;
 }
