--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -29,14 +29,17 @@ body {
 
 .website-intro {
     position: absolute;
-    top: 510px;
+    top: 535px;
     left: 50vw;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
     font-size: large;
-    background-color: #111113;
+    background-color: #282828;
     height: 280px;
+    border-radius: 10px;
+    border:3px solid white;
+    font-family: 'Lucida console';
 }
 
 .explore-link {
