--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,11 +3,17 @@
     justify-content: flex-start;
     padding: 0.5em;
     background-color: #282828;
+    border-radius: 10px;
+    border:3px solid rgb(255, 255, 255);
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Lucida console';
   }
   
   .navbar a:first-child {
     margin-right: auto;
-    margin-top: 4px;
+    margin-top: 10px;
     font-size: 25px;
   }
   
@@ -31,7 +37,7 @@
     background-color: #111113;
     outline: none;
     border: none;
-    border-radius: 1.625rem;
+    border-radius: 10px;
     padding: 0 3.5rem 0 1.5rem;
     font-size: 1rem;
     transition: background-color 0.3s ease;
