--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,34 +1,44 @@
   .navbar {
     display: flex;
+    position: relative;
     justify-content: flex-start;
     padding: 0.5em;
     background-color: #282828;
-    border-radius: 10px;
-    border:3px solid rgb(255, 255, 255);
+    /* border-radius: 10px; */
+    border:2px solid rgb(255, 255, 255);
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    font-family: 'Lucida console';
+    font: 1.5rem 'silkscreen1', sans-serif;
   }
-  
-  .navbar a:first-child {
-    margin-right: auto;
-    margin-top: 10px;
-    font-size: 25px;
+
+  .navbar::after {
+    content: '';
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    box-shadow: 
+      -1px -1px 0 1px #000, /* top and left border */
+      1px 1px 0 1px #000, /* bottom and right border */
+      -2px -2px 0 2px #fff, /* top and left highlight */
+      2px 2px 0 2px #fff; /* bottom and right highlight */
+    z-index: -1;
   }
   
   .navbar a {
     display: inline-block;
     color: #ffffff;
     text-decoration: none;
-    margin-right: 100px;
-    margin-left: 100px;
-    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 50px;
+    margin-top: auto;
+    margin-bottom: auto;
   }
   
   .search-form {
     display: flex;
     align-items: center;
+    margin-left: auto;
+    margin-right: auto + 20px;
   }
   
   .search-form input {
@@ -85,13 +95,9 @@
     align-items: center;
     text-align: center;
   }
-
-  .profile-link {
-    display: flex;
-  }
   
   .dropdown-menu a {
-    color: black;
+    color: rgb(255, 0, 0);
     padding: 4px 8px;
     text-decoration: none;  
     display: block;
@@ -101,11 +107,20 @@
     border-bottom: 1px solid #ccc;
     box-sizing: border-box;
   }
-  
-  .profile-menu {
-    position: relative;
-    margin-right: 30px;
-    margin-top: 4px;
+
+  .title {
+    font: 2rem 'silkscreen2', sans-serif;
+    font-size: 40px;
   }
 
+  @keyframes highlight {
+    0% { color: transparent; }
+    50% { color: rgb(123, 252, 209); }
+    100% { color: rgb(123, 252, 209); }
+  }
+
+  .navbar a:hover {
+    animation: highlight 0.08s linear 2;
+    color: rgb(225, 150, 255);
+  }
   
