--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -21,31 +21,41 @@ body {
 
 .explore {
     position: absolute;
-    top: 570px;
+    top: 585px;
     left: 50%;
     transform: translate(-50%, -50%);
     width: auto;
+    font-size: larger;
 }
 
 .website-intro {
+    padding: 20px;
     position: absolute;
-    top: 535px;
-    left: 50vw;
+    top: 540px;
+    left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     text-align: center;
     font-size: large;
     background-color: #282828;
-    height: 280px;
-    border:2px solid white;
+    height: 250px;
+    border: 3px solid white;
     font-family: 'Lucida console';
 }
+
+@keyframes breathe {
+    0% { color: white; }
+    25% { color: rgb(167, 247, 220); }
+    50% { color: rgb(123, 252, 209); }
+    75% { color: rgb(167, 247, 220); }
+    100% { color: white; }
+  }
 
 .explore-link {
     text-decoration: none;
     font: 1.2em 'silkscreen4', sans-serif;
     color: white;
     font-size: 2em;
-    background-color: #541A8C;
     padding: 10px 20px;
+    animation: breathe 2s linear infinite;
 }
