--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
-    margin-top: 10%;
+    width: 200px;
+    margin: auto;
+    margin-top: 200px;
 }
 
 .sign-up-container input {
