--- a/src/styles/DataPage.css
+++ b/src/styles/DataPage.css
@@ -9,13 +9,27 @@ body {
   }
   
 #main-search-input {
-  width: 50%;
+  /* width: 50%;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 10px; 
+  outline: none; */
+  height: 3.0rem;
+  background-color: #111113;
+  color: white; 
   outline: none;
+  border: 2px solid white; 
+  border-radius: 0px;
+  font-size: 1rem;
+  width: 50%;
 }
+
+#main-search-input::placeholder {
+  color: white;
+  font: 1.5rem 'silkscreen1', sans-serif;
+}
+
 
 .cover-container {
   text-align: center;
@@ -62,13 +76,12 @@ table {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 3%;
+  width: 20%;
 }
 
 .no-res {
-  color: white;
+  color: red;
   text-align: center;
-  font-size: 2em;
   margin-top: 200px;
-
+  font: 2.5rem 'silkscreen1', sans-serif;
 }
