--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,3 +1,8 @@
+@keyframes blink {
+    0%, 50%, 100% {opacity: 0;}
+    25%, 75% {opacity: 0.7;}
+}
+
 .sign-up-container {
     display: flex;
     flex-direction: column;
@@ -6,6 +11,7 @@
     width: 200px;
     margin: auto;
     margin-top: 200px;
+    animation: blink 0.15s step-start 1.2;
 }
 
 .user,.pwd {
