--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,6 +8,7 @@
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 20px;
     font: 1.5rem 'silkscreen1', sans-serif;
   }
 
@@ -27,7 +28,6 @@
     display: inline-block;
     color: #ffffff;
     text-decoration: none;
-    margin-right: 10px;
     margin-left: 50px;
     margin-top: auto;
     margin-bottom: auto;
@@ -89,11 +89,12 @@
     background: transparent;
     font: 1.5rem 'silkscreen1', sans-serif;
     cursor: pointer;
+    margin-left: 50px;
   }
 
   .title {
     font: 2rem 'silkscreen2', sans-serif;
-    font-size: 40px;
+    font-size: 46px;
   }
 
   @keyframes highlight {
@@ -118,6 +119,7 @@
     margin-top: auto;
     margin-bottom: auto;
     animation: blink 0.15s step-start 1.2;
+    z-index: 2;
   }
 
   .sign-in-form input {
@@ -141,6 +143,7 @@
     color: red;
     font: 1rem 'silkscreen1', sans-serif;
     margin-right: 5px;
+    z-index: 2;
   }
 
   .sign-in-submit {
@@ -148,4 +151,5 @@
     font: 1rem 'silkscreen1', sans-serif;
     background-color: #111113;
     margin-top: 10px;
+    z-index: 2;
   }
