--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -113,6 +113,11 @@
     25%, 75% {opacity: 0.7;}
   }
 
+  @keyframes blink-error {
+    0%, 50%, 100% {opacity: 0;}
+    25%, 75% {opacity: 0.7;}
+  }
+
   .sign-in-form {
     color: #ffffff;
     text-decoration: none;
@@ -141,7 +146,8 @@
     border: 2px solid red; 
     border-radius: 0px;
     font-size: 1rem;
-    margin: 10px 5px; 
+    margin: 10px 5px;
+    animation: blink-error 0.15s step-start 1.2;
   }
   
   .sign-in-input::placeholder {
@@ -163,8 +169,4 @@
     background-color: #111113;
     margin-top: 10px;
     z-index: 2;
-  }
-
-  #sign-in-error {
-    z-index: 10;
   }
