--- a/src/styles/DataPage.css
+++ b/src/styles/DataPage.css
@@ -29,6 +29,7 @@ body {
   text-align: center;
   vertical-align: middle;
   width: 200px;
+  height: 264.66px;
 }
 
 
@@ -49,6 +50,7 @@ table {
 
 .game-cover {
   width: 100%;
+  max-height: 264.66px;
   display: block; 
   border: 3px solid white; 
   box-sizing: border-box;
@@ -63,6 +65,16 @@ table {
   text-decoration-color: #541A8C;
   text-decoration-thickness: 4px;
 }
+
+.game-desc {
+  color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+
 
 .before-search {
   display: block;
