--- a/src/styles/DataPage.css
+++ b/src/styles/DataPage.css
@@ -4,7 +4,8 @@ body {
 
 .main-search-form {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 40px 0px -100px 0px;
   }
   
