--- a/src/styles/SecondNavbar.css
+++ b/src/styles/SecondNavbar.css
@@ -1,15 +1,18 @@
 .dashboard {
-    height: 80vh;
-    width: 30vh;
-    /* margin-left: 20px; */
-    border: 2px solid rgb(255, 255, 255);
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+  height: 80vh;
+  width: 30vh;
+  /* margin-left: 20px; */
+  border: 2px solid rgb(255, 255, 255);
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  position: relative;
 }
 
 .dashboard::after {
+    content: '';
+    position: absolute;
     top: 0; right: 0; bottom: 0; left: 0;
     box-shadow: 
       -1px -1px 0 1px #000, /* top and left border */
@@ -17,7 +20,7 @@
       -2px -2px 0 2px #fff, /* top and left highlight */
       2px 2px 0 2px #fff; /* bottom and right highlight */
     z-index: -1;
-  }
+}
 
 .dash-link {
     display: block;
