--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -59,7 +59,7 @@
     transition: background-color 0.3s ease;
   }
 
-  svg {
+  .search-svg {
     margin-top: 0.2rem;
     margin-left: -2.1rem;
     background: none;
