--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@ body, #root {
     min-height: 100vh;
 }
 
-footer {
-    margin-top: auto;
+.main {
+    position: relative;
+    min-height: 100vh;
 }
