Implemented user library page. Known error of auth context not correctly managing isLoggedIn.

--- a/src/styles/GamePage.css
+++ b/src/styles/GamePage.css
@@ -53,6 +53,7 @@
 
 .cover {
     width: 253px;
+    height: 337.33px;
     object-fit: contain;
     object-position: center;
     border-radius: 25px;
