--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -5,13 +5,11 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;  
-    margin-bottom: -60px;
 }
 
 .footer-p {
     margin-top: -4px;
-    margin-bottom: 4px;
+    margin-bottom: 0;
     padding: 10px;
     font-size: 12px;
 }
