Further stylized all dashboard pages. Allow user to change name through profile page with appropriate database updates. Think of what to show in library if the user has no games added.

--- a/src/styles/SecondNavbar.css
+++ b/src/styles/SecondNavbar.css
@@ -1,7 +1,6 @@
 .dashboard {
-  height: 80vh;
-  width: 30vh;
-  /* margin-left: 20px; */
+  height: 700px;
+  width: 200px;
   border: 2px solid rgb(255, 255, 255);
   margin-top: 20px;
   margin-left: 20px;
