--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -3,7 +3,7 @@ footer {
     color: white;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: -30px;
     width: 100%;
 }
 
