--- a/src/styles/LibraryPage.css
+++ b/src/styles/LibraryPage.css
@@ -24,8 +24,12 @@
     text-align: center;
 }
 
-.library-content {
+.content-area {
     display: flex;
+}
+
+.allGames {
+    margin-left: 20px;
 }
 
 .library-game-title {
