--- a/src/styles/LibraryPage.css
+++ b/src/styles/LibraryPage.css
@@ -12,16 +12,18 @@
     flex-wrap: wrap;
     margin-top: 10px;
     animation: fadeIn 0.2s ease-in-out;
+    height: 700px; /* Adjust this value as needed */
+    overflow-y: auto; /* Enable vertical scrolling */
 }
 
 .game-item {
-    padding: 10px;
-    width: 270px;
+    width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding-bottom: 30px;
 }
 
 .content-area {
@@ -40,4 +42,14 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 80%;
+}
+
+.library-cover {
+    width: 150px;
+    height: auto;
+    object-fit: contain;
+    object-position: center;
+    border-radius: 25px;
+    display: block;
+    cursor: pointer;
 }
