--- a/src/styles/GamePage.css
+++ b/src/styles/GamePage.css
@@ -51,6 +51,14 @@
     height: 100%;
 }
 
+.user-rating {
+    display: flex;
+    justify-content: center;
+    color: white;
+    height: 200px;
+    background-color: rgb(255, 39, 39);
+}
+
 .cover {
     width: 253px;
     height: 337.33px;
@@ -97,23 +105,6 @@
     color: white;
 }
 
-.details {
-    h2 {
-        color: white;
-        text-decoration: underline;
-        text-decoration-color: #541A8C;
-        text-decoration-thickness: 4px;
-        font-size: 30px;
-        margin-bottom: -10px;
-        margin-top: -10px;
-    }
-    width: 200px;
-    height: 200px;
-    background: transparent;
-    color: white;
-    font-size: 20px;
-}
-
 .noImages {
     display: flex;
     flex-direction: column;
@@ -128,4 +119,50 @@
 .button-column {
     text-align: center;
     vertical-align: middle;
+}
+
+.review-button {
+    position: relative;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    height: 40px;
+    z-index: 0;
+}
+
+.review-button::after{
+    content: '';
+    background: linear-gradient(to right, #6d5683,#541A8C);
+    height: 80%;
+    width: 0px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 100ms ease-in-out;
+}
+
+.review-button:hover::after {
+    width: 100%;
+}
+
+.details {
+    margin-left: 40px;
+}
+
+.details-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #541A8C;
+    width: 200px;
+    height: 300px;
+    margin-top: 100px;
+    border-radius: 5px;
+    p {
+        margin: 0;
+    }
 }
