--- a/src/styles/FriendsPage.css
+++ b/src/styles/FriendsPage.css
@@ -3,3 +3,22 @@
     justify-content: center;
     align-items: center;
 }
+
+.friend-list {
+    display: flex;
+    flex-wrap: wrap;
+    height: 700px;
+    margin-top: 10px;
+    animation: fadeIn 0.2s ease-in-out;
+    overflow-y: auto; /* Enable vertical scrolling */
+}
+
+.friend-item {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 30px;
+}
